<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_all">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erJinZi"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/textViewEr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="@dimen/textSize"
            android:gravity="right"
            android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baJinZi"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>
        <EditText
            android:id="@+id/textViewBa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"
            android:maxLines="1"
            android:gravity="right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siJinZi"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>
        <EditText
            android:id="@+id/textViewSi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"
            android:maxLines="1"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siLiuJinZi"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"/>
        <EditText
            android:id="@+id/textViewShiLiu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text"
            android:maxLines="1"
            android:gravity="right"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/button">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="A"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="B"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="C"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="D"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="3"
            android:background="@color/button"
            android:text="1"
            android:textColor="@color/text"
            android:textSize="33sp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="2"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="3"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/buttonE"
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="E"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="4"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="5"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="6"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/buttonF"
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="F"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="7"
            android:textColor="@color/text"
            android:textSize="33sp"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="8"
            android:textColor="@color/text"
            android:textSize="@dimen/activityOneTextSize" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="9"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="0"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="C"
            android:textColor="@color/text"
            android:textSize="33sp" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:background="@color/button"
            android:text="←"
            android:textColor="@color/text"
            android:textSize="33sp" />


    </GridLayout>


</LinearLayout>